test/Fail/TerminationCheckUnquoteDeclUnnamed.err
TerminationCheckUnquoteDeclUnnamed.agda:30.1-23: error: [TerminationIssue]
Termination checking failed for the following functions:
  aux
Problematic calls:
  TerminationCheckUnquoteDeclUnnamed.aux
